<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="no_items_found">No items found</string>
    <string name="event_name">Event Name</string>
    <string name="event_image">Event Image</string>
    <string name="search_event">Search Event</string>
    <string name="register">Register</string>
    <string name="title_detail">Detail</string>
    <string name="event_owner">By: %1$s</string>
    <string name="remaining_quota">Sisa kuota: %1$d</string>
    <string name="event_time">Waktu acara: %1$s</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="recommendation_event_for_you">Recommendation event for you!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_description">Enable daily reminder</string>
    <string name="dark_mode_description">Enable dark mode</string>
</resources>