<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dicoding_event"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_events"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <include layout="@layout/empty_item" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHorizontalEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_events"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <include layout="@layout/empty_item" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVerticalEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

</LinearLayout>